--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,18 @@
     "dependencies": {
         "@apollo/server": "^4.10.4",
         "apollo-server": "^3.13.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-jwt": "^8.4.1",
         "graphql": "^16.8.1",
+        "jsonwebtoken": "^9.0.2",
+        "knex": "^3.1.0",
+        "nanoid": "^5.0.7",
+        "nexus": "^1.3.0",
         "nodemon": "^3.1.0"
     },
     "scripts": {
-        "start": "nodemon index.js"
+        "dev": "nodemon index.js"
     }
 }
